--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>AndrewsWoodturningApp</title>
+    <title>Chief's Wooden Wonders</title>
     <%= csrf_meta_tags %>
     <!-- Load Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
@@ -12,6 +12,18 @@
   </head>
 
   <body>
-    <%= yield %>
+    <nav>
+      <div class="nav-wrapper">
+        <a href="#" class="brand-logo">Chief's Wooden Wonders</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="#">Gallery</a></li>
+          <li><a href="#">For Sale</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+    <main>
+      <%= yield %>
+    </main>
   </body>
 </html>
