style home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,24 @@
-<h1>Hello World</h1>
+<div class="parallax-container valign-wrapper">
+  <div class="section no-pad-bot">
+    <div class="container">
+      <div class="row center">
+        <h1 class="header title col s12">Chief's Wooden Wonders</h5>
+      </div>
+    </div>
+  </div>
+  <div class="parallax"><img src="<%= image_path('tree-bkgrnd.jpg')%> "></div>
+</div>
+<div id="about" class="container ptb-50">
+  <div class="row">
+    <h3 class="title center">About Richard</h2>
+  </div>
+  <div class="row center">
+    <div class="col s12 m6 push-m6 l6 push-l6">
+      <img id="headshot" class="responsive-img z-depth-5" src="<%= image_path('dog.jpg') %>" alt="headshot image">
+    </div>
+    <div class="col s12 m6 pull-m6 l6 pull-l6 right-align">
+      <p class="mt-0">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.
+      <p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est. Sed lectus. Praesent elementum hendrerit tortor. Sed semper lorem at felis. Vestibulum volutpat, lacus a ultrices sagittis, mi neque euismod dui, eu pulvinar nunc sapien ornare nisl. Phasellus pede arcu, dapibus eu, fermentum et, dapibus sed, urna.</p>    
+    </div>
+  </div>
+</div>
