--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,10 +1,12 @@
-/********* STICKY FOOTER *********/
-body {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
+.title {
+  font-family: 'Alfa Slab One', cursive;
 }
 
-main {
-  flex: 1 0 auto;
+.mt-0 {
+  margin-top: 0;
+}
+
+.ptb-50 {
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
