--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <%= csrf_meta_tags %>
     <!-- Load Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One" rel="stylesheet">
     <!-- Load Icons -->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -13,13 +14,22 @@
 
   <body>
     <nav>
-      <div class="nav-wrapper">
-        <a href="#" class="brand-logo">Chief's Wooden Wonders</a>
+      <div class="nav-wrapper container">
+        <a href="/" class="brand-logo title">Chief's</a>
+        <!-- Nav Bar-->
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="#">Gallery</a></li>
           <li><a href="#">For Sale</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
+        <!-- Side Nav-->
+        <ul id="slide-out" class="side-nav">
+          <li><a href="/">Home</a></li>
+          <li><a href="#">Gallery</a></li>
+          <li><a href="#">For Sale</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+        <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
       </div>
     </nav>
     <main>
