--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,16 +18,16 @@
         <a href="/" class="brand-logo title">Chief's</a>
         <!-- Nav Bar-->
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="#">Gallery</a></li>
-          <li><a href="#">For Sale</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="/gallery">Gallery</a></li>
+          <li><a href="/store">For Sale</a></li>
+          <li><a href="/contact">Contact</a></li>
         </ul>
         <!-- Side Nav-->
         <ul id="slide-out" class="side-nav">
           <li><a href="/">Home</a></li>
-          <li><a href="#">Gallery</a></li>
-          <li><a href="#">For Sale</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="/gallery">Gallery</a></li>
+          <li><a href="/store">For Sale</a></li>
+          <li><a href="/contact">Contact</a></li>
         </ul>
         <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
       </div>
